--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,9 +1,30 @@
+.container{
+    display: flex;
+}
 table  {
     width: 20%;
     border: 1px solid black;
     margin-top: 0px;
   }
-
+h2{
+    text-align: center;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-style: oblique;
+}
+.align-player{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color:antiquewhite;
+    width: 270px;
+    margin-top: 60px;
+    margin-left: 60px;
+}
+.align-player1{
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color:antiquewhite;
+    width: 270px;
+    margin-top: 60px;
+    margin-left: 60px;
+}
 td{
     border: 1px solid black;
 }
@@ -34,4 +55,14 @@ p{
 .pur{
     background-color: palevioletred;
     border-radius:  50px;
+}
+.align_table{
+    background-color: white;
+    border: 3px ;
+    width: 400px;
+    margin-left: 360px;
+}
+.tdivs{
+    width: 50px;
+    height: 50px;
 }
