--- a/src/app/player1/player1.component.html
+++ b/src/app/player1/player1.component.html
@@ -1,4 +1,6 @@
-<h1>Player 1</h1>
-<button (click)="onPlay()">Play</button>
-<h2>Player 1 Points:{{pnts}}</h2>
-<h3>Dice Value:{{crand}}</h3>
+<h2>Player 1</h2>
+
+<h4>Player 1 Points:{{pnts}}</h4>
+<h5>Dice Value:{{crand}}</h5>
+
+<button class ="color_value2"  (click)="onPlay()" [disabled]="isblk()">Play</button>
